# artifacts/api-server/src/routes/index.ts
@@ -4,6 +4,9 @@ import ownersRouter from "./owners";
 import sponsorsRouter from "./sponsors";
 import sponsorLeadsRouter from "./sponsorLeads";
 import adminRouter from "./admin";
+import cardsRouter from "./cards";
+import authRouter from "./auth";
+import meRouter from "./me";
 
 const router: IRouter = Router();
 
@@ -12,5 +15,8 @@ router.use(ownersRouter);
 router.use(sponsorsRouter);
 router.use(sponsorLeadsRouter);
 router.use(adminRouter);
+router.use(cardsRouter);
+router.use(authRouter);
+router.use(meRouter);
 
 export default router;
